modifiquei os arquivos .html + um arquivo .css

--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -4,33 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Music Center</title>
 </head>
 <body>
+    <header>
     <div>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
+        <h1>Bem-vind@ ao <em>Music Center</em>!</h1>
+        <p class="chamada">A maior loja de instrumentos musicais!</p>
     </div>
 
-    <div>
+    <div class="hdr">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
-
+    </header>
     <div>
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
     </div>
 
     <div>
+        <footer style="margin-top: 730px; margin-left: 750px">
         <p>Siga-nos nas redes sociais!</p>
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <div class="images">
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"  style="margin: 10px; width: 50px;"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" style="margin: 10px; width: 50px"/>
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" style="margin: 10px; width: 50px"/>
         </div>
+        </footer>
     </div>
 </body>
 </html>
