--- a/semana1/sistema-loja/ctrl-estoque.html
+++ b/semana1/sistema-loja/ctrl-estoque.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css"
     <title>Controle de Estoque</title>
 </head>
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <p>Music Center</p>
     </div>
     
-    <div>
+    <div class="hdr">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
 
-    <h2>Controle de Estoque</h2>
+    <h2 class="ctrl">Controle de Estoque</h2>
 
-    <table>
+    <table class="tabela">
         <tr>
             <th>Foto</th>
             <th>Descrição</th>
@@ -29,43 +30,53 @@
         </tr>
 
         <tr>
-            <td><img src="./img/LP.jpg" alt="Gibson Les Paul"/></td>
+            <td><img src="./img/LP.jpg" alt="Gibson Les Paul" style="width: 50px"/></td>
             <td>Les Paul</td>
             <td>13.500,00</td>
             <td>2</td>
         </tr>
 
         <tr>
-            <td><img src="./img/FV.jpg" alt="Gibson Flying V"/></td>
+            <td><img src="./img/FV.jpg" alt="Gibson Flying V" style="width: 100px"/></td>
             <td>Flying V</td>
             <td>10.000,00</td>
             <td>5</td>
         </tr>
 
         <tr>
-            <td><img src="./img/EX.jpg" alt="Gibson Explorer"/></td>
+            <td><img src="./img/EX.jpg" alt="Gibson Explorer" style="width: 100px"/></td>
             <td>Explorer</td>
             <td>9.000,00</td>
             <td>2</td>
         </tr>
 
         <tr>
-            <td><img src="./img/SG.jpg" alt="Gibson SG"/></td>
+            <td><img src="./img/SG.jpg" alt="Gibson SG" style="width: 100px"/></td>
             <td>SG</td>
             <td>8.000,00</td>
             <td>10</td>
         </tr>
-        
-        !-- Crie mais uma linha desta tabela abaixo \/ -->
 
         <tr>
-            <td><img src="./img/TC.jpg" alt="Fender Telecaster"></td>
+            <td><img src="./img/TC.jpg" alt="Fender Telecaster" style="width: 50px"></td>
             <td>Telecaster</td>
             <td>10.000,00</td>
             <td>1</td>
         </tr>
 
     </table>
+
+    <div>
+        <footer style="margin-top: 40px; margin-left: 750px">
+        <p>Siga-nos nas redes sociais!</p>
+
+        <div class="images">
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"  style="margin: 10px; width: 50px;"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" style="margin: 10px; width: 50px"/>
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" style="margin: 10px; width: 50px"/>
+        </div>
+        </footer>
+    </div>
 
 </body>
 </html>
