--- a/semana1/sistema-loja/add-produto.html
+++ b/semana1/sistema-loja/add-produto.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <title>Adicionar Produto</title>
 </head>
 <body>
     <div>
-        <p>Music Center</p>
+        <h1>Bem-vind@ ao <em>Music Center</em>!</h1>
+        <p class="chamada">A maior loja de instrumentos musicais!</p>
     </div>
     
     <div class="hdr">
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <a href="index.html">PÁGINA INICIAL</a>
+        <a href="ctrl-estoque.html">CONTROLE DE ESTOQUE</a>
+        <a href="add-produto.html">ADICIONAR PRODUTO</a>
+        <a href="funcionarios.html">FUNCIONÁRIOS</a>
+        <a href="vendas.html">PÁGINA DE VENDAS</a>
+        <a href="historico-vendas.html">HISTÓRICO</a>
     </div>
-
     
     <h2 class="add-produto">Adicionar Produto</h2>
     <form action="">
