--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -15,10 +15,10 @@
     </div>
 
     <div class="hdr">
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <a href="index.html">PÁGINA INICIAL</a>
+        <a href="ctrl-estoque.html">CONTROLE DE ESTOQUE</a>
+        <a href="add-produto.html">ADICIONAR PRODUTO</a>
+        <a href="funcionarios.html">FUNCIONÁRIOS</a>
     </div>
     </header>
     <div>
