--- a/semana23/cubo-network/frontend/public/index.html
+++ b/semana23/cubo-network/frontend/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="//db.onlinewebfonts.com/c/bd6d57e762c3ae26bb99d09cce5bc33f?family=Patagonia" rel="stylesheet" type="text/css"/>
+    <link href="//db.onlinewebfonts.com/c/3bd84147fc91089c2d9a15e632291f25?family=News+Gothic" rel="stylesheet" type="text/css"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
